change name of app to NotesApp

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,13 +2,13 @@
 <html>
     <head>
       {% if title %}
-      <title>{{ title }} - Microblog</title>
+      <title>{{ title }} - NotesApp</title>
       {% else %}
-      <title>Welcome to Microblog</title>
+      <title>Welcome to NotesApp</title>
       {% endif %}
     </head>
     <div>
-    Microblog:
+    NotesApp
     <a href="/index">Home</a>
     <a href="/login">Login</a>
     </div>
