--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,19 +6,36 @@
       {% else %}
       <title>Welcome to NotesApp</title>
       {% endif %}
-    </head>
-    <div>
-    NotesApp
-    <a href="/index">Home</a>
-    {% if current_user.is_anonymous %}
-       <a href="{{ url_for('login') }}">Login</a>
-    {% else %}
-       <a href="{{ url_for('logout') }}">Logout</a>
-    {% endif %}
-    </div>
 
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/main.css') }}">
+    </head>
+    <nav class="navbar navbar-expand-md">
+    NotesApp
+    <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="main-navigation">
+    <ul class="navbar-nav">
+    <li class="nav-item">
+    	<a class="nav-link" href="/index">Home</a>
+    </li>
+    <li class="nav-item">
+	    {% if current_user.is_anonymous %}
+	       <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+	    {% else %}
+	       <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+	    {% endif %}
+    </li>
+    </ul>
+    </div>
+    </nav>
     <body>
        <hr>
        {% block content %}{% endblock %}
+       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
     </body>
 </html>
