--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,6 +14,11 @@
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
+	<input
+	type="hidden"
+	name="next"
+	value="{{ request.args.get('next', '') }}"
+	/>
     </form>
 <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
 {% endblock %}
