Added nicer styling to pages using Bootstrap and made dummy notes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
 	<h1>Hi, {{ current_user.username }}!</h1>
+</div>
+
+<div class="container">
+  <h2>Your Notes</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Note</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for note in notes %}
+      <tr>
+        <td>{{ note.text }}</td>
+        <td>{{ note.date }}</td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
+
