--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="container">
     <h1>Sign In</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
@@ -21,4 +22,5 @@
 	/>
     </form>
 <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+</div>
 {% endblock %}
